# pyandre

./: .gitignore  LICENSE  README.md  VERSIONS.md  pyproject.toml
src/andre/: __init__.py
src/pyandre/: __init__.py  arid.py  block_result.py  cluster.py  result.py
test/: test__andre.py  test__pyandre.py  test_pyandre-arid.py  test_pyandre-block_result.py  test_pyandre-cluster.py  test_pyandre-result.py  test_pyandre.py
